Fix text not being vertically centered on Windows
In effect switches the font on used on Windows from Segoe UI to Arial.

Temporary solution to issue caused by uneven ascenders/descenders in
Segoe UI. We can either decide on a single font to use across OSes or
wait for https://www.w3.org/TR/css-inline-3/#leading-trim to be
implemented in browsers.

--- a/public/global.css
+++ b/public/global.css
@@ -1,6 +1,6 @@
 html {
   /* based on GitHub's system font stack */
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  font-family: -apple-system,BlinkMacSystemFont,Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
   box-sizing: border-box;
   height: 100%;
   overflow: hidden;
